--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       box-shadow: 0 0 15px rgba(0,0,0,0.1);
       animation: fadeIn 1s ease;
     }
-    .card h3 {
+    .card h1 {
       font-family: 'Dancing Script', cursive;
       font-size: 2em;
       text-align: left;
@@ -76,6 +76,16 @@
       text-align: justify;
       color: #444;
       margin: 10px 0;
+    }
+
+    .card img {
+      width: 30%;
+      max-width: 120px;
+      margin-top: 10px;
+      border-radius: 8px;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
     }
 
     .return-btn {
@@ -96,6 +106,29 @@
     @keyframes fadeIn {
       from {opacity: 0; transform: scale(0.95);}
       to {opacity: 1; transform: scale(1);}
+    }
+
+    @media (max-width: 768px) {
+      .card {
+        width: 100%;
+        max-width: none;
+        padding: 15px 20px;
+      }
+      .card h1 {
+        font-size: 1.4em;
+        margin-left: 0;
+      }
+      .card p {
+        font-size: 1em;
+        text-align: left;
+      }
+      .main-img {
+        width: 200px;
+      }
+      .card img {
+        width: 50%;
+        max-width: 150px;
+      }
     }
   </style>
 </head>
@@ -119,7 +152,7 @@
 		<p>Asi que nada, espero que aceptes o almnos me respondas esto de una manera seria pero que venga desde tu corazon.</p>
 		<p><strong> Quisieras ser mi Pareja? </strong>🥺</p>
 		<p">Atte: Nicolasss :D</p>
-        <img src="1.jpeg" alt="Imagen" style="width:10%; margin-top:10px; border-radius:8px; align-items: center;">
+        <img src="1.jpeg" alt="Imagen" style="margin-top:10px; border-radius:8px;">
     </div>
 
     <div style="text-align: center;">
